--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -1,25 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.java.tour_firm</groupId>
-  <artifactId>EasyTour</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0</version>
-  <name>EasyTour</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-<dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-  		<groupId>mysql</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>5.1.9</version>
- 	</dependency>
-  	<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.java.tour_firm</groupId>
+		<artifactId>EasyTour</artifactId>
+		<version>1.0</version>
+	</parent>
+	<artifactId>persistence</artifactId>
+	<dependencies>
+	<dependency>
    		<groupId>org.hibernate</groupId>
    		<artifactId>hibernate-core</artifactId>
    		<version>5.1.0.Final</version>
@@ -59,22 +48,12 @@
    		<artifactId>hibernate-ehcache</artifactId>
    		<version>5.1.0.Final</version>
   	</dependency>
-<dependency>
-	<groupId>org.hibernate.javax.persistence</groupId>
-	<artifactId>hibernate-jpa-2.1-api</artifactId>
-	<version>1.0.0.Final</version>
-</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.9</version>
+	</dependency>
 
-  	
-  </dependencies>
-  <modules>
-    
-    
-    
-    <module>entity</module>
-    <module>dao</module>
-    <module>service</module>
-    <module>app</module>
-    <module>persistence</module>
-  </modules>
+	</dependencies>
+
 </project>
