--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -18,10 +18,15 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.9</version>
 		</dependency>
-				<dependency>
-			<groupId>com.java.tour_firm</groupId>
-			<artifactId>persistence</artifactId>
-			<version>1.0</version>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.1.0.Final</version>
 		</dependency>
 	</dependencies>
 </project>
