--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -6,13 +6,16 @@
     <version>1.0</version>
   </parent>
   <artifactId>entity</artifactId>
-  <dependencies>
-
-			<dependency>
+	<dependencies>
+		<dependency>
 			<groupId>com.java.tour_firm</groupId>
 			<artifactId>persistence</artifactId>
 			<version>1.0</version>
 		</dependency>
-  </dependencies>
-  
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+	</dependencies>
 </project>
