--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.java.tour_firm</groupId>
 	<artifactId>EasyTour</artifactId>
@@ -20,9 +19,11 @@
 		<module>entity</module>
 		<module>dao</module>
 		<module>service</module>
-		<module>app</module>
-		<module>webapps</module>
-	</modules>
+		
+    <module>webapp</module>
+    <module>webapps</module>
+    <module>weba</module>
+  </modules>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
