--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>/WEB-INF/views/jsp/index.jsp</welcome-file>
+	</welcome-file-list>
 	
 	<error-page>
 		<error-code>404</error-code>
