added context files

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<display-name>EasyTour</display-name>
-
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/servlet-context.xml</param-value>
+		<param-value>WEB-INF/servlet-context.xml</param-value>
 	</context-param>
-
+	
 	<listener>
 		<listener-class>
 			org.springframework.web.context.ContextLoaderListener
