--- a/dao/src/main/resources/properties/database.properties
+++ b/dao/src/main/resources/properties/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/tour_firm
 jdbc.username=root
-jdbc.password=
+jdbc.password=TARAS1822
