--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.5.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>webapp</finalName>
