--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -56,10 +56,11 @@
 			<version>2.3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.5.3</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.3</version>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>webapp</finalName>
